--- a/css/main.css
+++ b/css/main.css
@@ -1168,7 +1168,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #93f0e9;
+  background: #c2f6fa;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
